[package]
name = "futures-rx"
version = "0.1.25"
edition = "2021"
description = "Rx implementations for the futures crate"
authors = ["Frank Pepermans <frank@igindo.com>"]
repository = "https://github.com/frankpepermans/rxrs"
license = "MIT"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["Observable", "Subject", "rx", "futures"]
documentation = "https://docs.rs/futures-rx/latest/futures_rx/stream_ext/trait.RxExt.html"

[dependencies]
futures = "0.3.31"
paste = "1.0.15"
pin-project-lite = "0.2.15"

[dev-dependencies]
futures-time = "3.0.0"
